--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 24
@@ -16,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 repositories {    flatDir {        dirs 'libs'    }}
@@ -23,8 +28,7 @@ repositories {    flatDir {        dirs 'libs'    }}
 dependencies {
     compile 'com.android.support:support-v4:24.0.0'
     compile files('libs/lwjgl_utils.jar')
-    compile(name:'base', ext:'aar')
-    compile(name:'common', ext:'aar')
-
+    compile(name: 'base', ext: 'aar')
+    compile(name: 'common', ext: 'aar')
     compile 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
 }
