Add a new Demo: ShinySprites(Not perfect!!)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -341,6 +341,17 @@
                 <category android:name="jet.learning.opengl.category.es2" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="jet.learning.opengl.samples.ShinySprites"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:label="ShinySprites" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="jet.learning.opengl.category.es2" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
