--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -262,6 +262,17 @@
         </activity>
 
         <activity
+            android:name="jet.learning.opengl.d3dcoder.TreeBillboardApp"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:label="TreeBillboardApp" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="jet.learning.opengl.category.es3" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name="jet.learning.opengl.gui_vr.GUIDemo"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
