--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -463,6 +463,17 @@
         </activity>
 
         <activity
+            android:name="jet.learning.opengl.samples.PointSprite"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:label="PointSpriteTest" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="jet.learning.opengl.category.es2" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name="jet.learning.opengl.fight404.Fireworks"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
