--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -264,28 +264,6 @@
         </activity>
 
         <activity
-            android:name="jet.learning.opengl.d3dcoder.BlendApp"
-            android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="landscape"
-            android:label="Blend Demo" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="jet.learning.opengl.category.es3" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name="jet.learning.opengl.d3dcoder.CrateApp"
-            android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="landscape"
-            android:label="Crate Demo" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="jet.learning.opengl.category.es3" />
-            </intent-filter>
-        </activity>
-
-        <activity
             android:name="jet.learning.opengl.d3dcoder.LitSkullApp"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
@@ -481,6 +459,17 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="jet.learning.opengl.category.es31" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="jet.learning.opengl.optimization.OptimizationApp"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:label="OptimizationApp" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="jet.learning.opengl.category.es3" />
             </intent-filter>
         </activity>
     </application>
