--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -408,6 +408,17 @@
         </activity>
 
         <activity
+            android:name="jet.learning.opengl.samples.ContourDemo"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:label="Distance Field" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="jet.learning.opengl.category.es2" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name="jet.learning.opengl.samples.DistortAnalyzing"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
@@ -464,6 +475,17 @@
 
         <activity
             android:name="jet.learning.opengl.optimization.OptimizationApp"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:label="OptimizationApp" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="jet.learning.opengl.category.es3" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="jet.learning.opengl.upsampling.ParticleUpsampling"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
             android:label="OptimizationApp" >
