--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -483,6 +483,17 @@
                 <category android:name="jet.learning.opengl.category.es31" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="jet.learning.opengl.samples.InterleaveTexture"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:label="InterleaveTexture" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="jet.learning.opengl.category.es31" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
